# comps

./: .djlintrc  .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierrc.json  .stylelintrc.json  CONTRIBUTING.md  Dockerfile  FORMATTERS_AND_LINTERS.md  LICENSE  NOTICE  README.md  SECURITY.md  auth.py  database.py  database_metrics.py  db.py  docker-compose.postgres.yml  docker-compose.yml  docker-entrypoint.sh  eslint.config.js  index.html  main.py  openapi.json  package-lock.json  package.json  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docker-build-test.yml  docker-build.yml  lint-format.yml  publish-docs.yml  tests.yml
api/: __init__.py  models.py  router.py
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
docs/: API.md  Home.md  Installation.md
examples/: api_example.py
migrations/: __init__.py  manager.py
migrations/versions/: 001_initial_schema.py  002_update_schema.py  __init__.py  (+7 more)
scripts/: check_format_lint.bat  check_format_lint.sh  format_all.bat  format_all.sh  generate_openapi.py  generate_swagger_ui.py  migrate_sqlite_to_postgres.py
templates/: account.html  account.jinja  admin.html  admin.jinja  base.html  compare.html  compare.jinja  index.html  index.jinja  login.html  login.jinja  metrics.html  metrics.jinja  swagger_ui.html
tests/: conftest.py  test_api.py  test_auth.py  test_database.py
(+4 files in other folders)
